--- a/css/main.css
+++ b/css/main.css
@@ -8,11 +8,19 @@ html {
   box-sizing: inherit;
 }
 
-
+div .text {
+  display: inline;
+}
+html body {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
 body {
   background-color: #eee9de;
   color: #333;
-  width: 400px;
+  min-height: 100px;
+  max-width: 400px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 1.5rem;
