--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ html {
   box-sizing: border-box;
   font-family: lato, sans-serif;
   line-height: 1.5;
+  font-family: 'Lato', sans-serif;
 }
 
 *, *::before, *::after {
@@ -12,16 +13,28 @@ html {
 body {
   background-color: #eee9de;
   color: #333;
+  margin-top: 1.5rem;
 }
 
 
 /* --------Division of Areas-------- */
+
+section {
+  text-align: center;
+  vertical-align: middle;
+}
+
+div {
+  vertical-align: middle;
+}
+
 .text {
   display: inline-block;
   width: 100%;
   max-width: 400px;
   text-align: left;
-  padding: 1em;
+  padding: .4em .75em .5em;
+  line-height: 1.5;
 }
 
 .image {
@@ -31,9 +44,6 @@ body {
   padding: 1em;
 }
 
-div {
-  vertical-align: middle;
-}
 img {
   display: block;
   width: 100%;
@@ -49,11 +59,6 @@ a {
 }
 
 a:hover {
-  background-color: #333;
+  background-color: #666;
   color: white;
-}
-
-section {
-  text-align: center;
-  vertical-align: middle;
 }
