--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,7 @@
 html {
   box-sizing: border-box;
-  font-family: lato, sans-serif;
   line-height: 1.5;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 *, *::before, *::after {
