--- a/css/main.css
+++ b/css/main.css
@@ -8,11 +8,10 @@ html {
   box-sizing: inherit;
 }
 
-}
 body {
   background-color: #eee9de;
   color: #333;
-  margin-top: 1.5rem;
+  margin: 0;
 }
 
 
@@ -21,6 +20,8 @@ body {
 section {
   text-align: center;
   vertical-align: middle;
+  padding-top: 2em;
+  padding-bottom: 2em;
 }
 
 div {
@@ -30,16 +31,15 @@ div {
 .text {
   display: inline-block;
   width: 100%;
-  max-width: 400px;
+  max-width: 25em;
   text-align: left;
-  padding: .4em .75em .5em;
-  line-height: 1.5;
+  padding: 1em;
 }
 
 .image {
   display: inline-block;
   width: 100%;
-  max-width: 400px;
+  max-width: 25em;
   padding: 1em;
 }
 
@@ -49,15 +49,19 @@ img {
 }
 
 /* --------Button-------- */
-a {
+.btn {
   padding: .75em;
   border: 2px #333 solid;
   border-radius: .4em;
   text-decoration: none;
   color: #333;
+  display: inline-block;
 }
 
-a:hover {
+.btn:hover {
   background-color: #666;
   color: white;
+}
+h2 {
+  margin-top: 0;
 }
